# liquidclips

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_NEXT.md  DEPLOYMENT.md  MINECRAFT_CHALLENGE_SPEC.md  README.md  RELEASING.md  SPRINT_HANDOFF.md  SPRINT_LOCKS.md  affiliate-user-journey.md  build-status.md  notifications.md  oauth-billing.md  site-map.md  transcribe-hybrid.md
.githooks/: commit-msg  pre-commit
account-app/: next.config.ts  package-lock.json  package.json
desktop/: .gitignore  CLAUDE.md  EARN.md  LAUNCH.md  PRODUCT.md  index.html  package-lock.json  package.json  playwright.splash.config.ts  playwright.splash.vite.config.ts  tsconfig.json  tsconfig.tsbuildinfo  v1.1.md  vite.config.ts
desktop/src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  entitlements-direct.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth_panel.rs  browse.rs  earn_panel.rs  lib.rs  main.rs  sidecar.rs
docs/: AYRSHARE_INTEGRATION_SPEC.md  BACKEND_HEALTH_CHECK_2026-06-02.md  CLAUDE_AFFILIATE_STARTER_PASS_COPY_SCOPE.md  CLAUDE_BUGFIX_REPORT_FFMPEG_WHOP_2026-05-24.md  CLAUDE_BUILD_BRIEF.md  CLAUDE_CLIPPING_SPEED_OPUS_BENCHMARK_HANDOFF_2026-06-04.md  CLAUDE_IG_RESEARCH_TOOL_INSTALL_2026-06-03.md  CLAUDE_JUNIOR_HANDOFF_WHOP_EARN.md  CLAUDE_MASTER_GROWTH_FLYWHEEL_IMPLEMENTATION.md  CLAUDE_POSTHOG_AFFILIATE_FUNNEL_ARCHITECTURE.md  CLAUDE_REACTION_LIBRARY_HANDOFF_2026-06-04.md  CLAUDE_REACTION_SUITE_LAUNCH_BLOCKER_SPEC_2026-06-04.md  CLAUDE_REMIX_INSTALL_SCOPE_2026-06-03.md  EARN_RESTORE_DIFF_REPORT.md  (+23 more)
(+497 files in other folders)
